--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+Version 2.3.1, 2023-07-04
+- Ensure compatibility with Python versions < 3.9 (#19).
+
+
 Version 2.3.0, 2023-06-08
 - Fix a bug where notes were not displayed when split by day (#17);
 - Rename the git repository.
