--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+Version 2.3.2, 2023-08-22
+- Change return type from NoReturn to None (#21).
+
+
 Version 2.3.1, 2023-07-04
 - Ensure compatibility with Python versions < 3.9 (#19).
 
