--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+Version 2.4.5, 2024-09-23
+- Add Spanish language support (#32).
+
+
 Version 2.4.4, 2024-08-04
 - Fix the unavoidable warning about days and dates are used at the same time (#30).
 
