#38: - Fix the parsing of weekdays in the configuration. - Add fallback logic and the warning. - Add example code to test the fallback logic. - Add unit tests. Commons: - Update the Pillow dependency version. - Address the import warning.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,9 @@
+Version 2.5.0, 2025-08-18
+- Fix the parsing of weekdays in the configuration (#38).
+- Add Dutch language support (#37).
+- Update the Pillow dependency version.
+
+
 Version 2.4.9, 2025-08-16
 - Add French language support (#36).
 
